Fix the view creation
* column data needed fixing
* view name needed updating

--- a/deploy/replication-subscription-runner-cji.yml
+++ b/deploy/replication-subscription-runner-cji.yml
@@ -94,6 +94,8 @@ parameters:
   value: host-inventory-db
 - name: HBI_PUBLICATION
   value: hbi_hosts_pub
+- name: HBI_SUBSCRIPTION
+  required: true
 - name: REPLICATION_SUBSCRIPTOR_SUSPEND
   value: 'false'
 - name: REPLICATION_SUBSCRIPTOR_CRON_SCHEDULE
