Update to use versioned replication and transformed tags
* Use versioned pub name
* User transformed data tags column
* Perform insights-id filtering in view

--- a/deploy/replication-subscription-runner-cji.yml
+++ b/deploy/replication-subscription-runner-cji.yml
@@ -117,7 +117,7 @@ parameters:
 - name: HBI_DB_SECRET
   value: host-inventory-db
 - name: HBI_PUBLICATION
-  value: hbi_hosts_pub
+  value: hbi_hosts_pub_v1_0_0
 - name: HBI_SUBSCRIPTION
   required: true
 - name: ALTER_SUBSCRIPTION
